.metadata/.plugins/org.eclipse.cdt.ui/analogread.build.log
22:52:34 **** Incremental Build of configuration Debug for project analogread ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F101xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:106:11: error: 'raw' undeclared (first use in this function)
  106 |           raw =  HAL_ADC_GetValue(&hadc1);
      |           ^~~
../Core/Src/main.c:106:11: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:109:47: error: 'msg2' undeclared (first use in this function)
  109 |          HAL_UART_Transmit(&huart1, (uint8_t*)msg2, strlen(msg2), 300);
      |                                               ^~~~
../Core/Src/main.c:109:53: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
  109 |          HAL_UART_Transmit(&huart1, (uint8_t*)msg2, strlen(msg2), 300);
      |                                                     ^~~~~~
../Core/Src/main.c:109:53: warning: incompatible implicit declaration of built-in function 'strlen'
../Core/Src/main.c:21:1: note: include '<string.h>' or provide a declaration of 'strlen'
   20 | #include "main.h"
  +++ |+#include <string.h>
   21 | 
../Core/Src/main.c:107:15: warning: unused variable 'vin' [-Wunused-variable]
  107 |         float vin = raw*(3.3/4096);
      |               ^~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

22:52:35 Build Failed. 3 errors, 3 warnings. (took 518ms)

